To do #1 Develop Sharenian Page

--- a/client/src/components/home.css
+++ b/client/src/components/home.css
@@ -10,25 +10,82 @@
 
 .search_bar_container {
   position: absolute;
+  background-color: #FFF;
   top: 400px;
   left: 50%;
   transform: translateX(-50%);
   -moz-transform: translateX(-50%);
   -webkit-transform: translateX(-50%);
-  display: flex;
   width: 800px;
-  height: 50px;
+  height: 40px;
+  padding: 10px;
+  display: flex;
+  border: none;
+  border-radius: 30px;
+  
+}
+
+.search_bar_container .drop_down{
+  width: 140px;
+  border-right: 2px solid #9fa2ad;
+  color: #7c7f8b;
+  cursor: pointer;
+}
+
+.search_bar_container .drop_down .default_checked{
+  font-size: 1.2rem;
+  padding: 6px;
+  text-align: center;
+}
+
+.search_bar_container .drop_down ul {
+  background-color: #fff;
+  width: 110px;
+  height: 160px;
+  padding-left: 30px;
+  border-radius: 10px;
+  overflow-y: auto;
+}
+
+.search_bar_container .drop_down li {
+  margin: 4px 0px;
+  list-style: none;
+}
+
+.search_bar_container .drop_down li img {
+  position: relative;
+  top: 2px;
+  left: -24px;
+}
+
+.search_bar_container .drop_down li label {
+  position: relative;
+  left: -16px;
+  cursor: pointer;
+}
+
+.radio_btn {
+  position: relative;
+  left: -8px;
+  visibility: hidden;
 }
 
 .input_bar {
   font-family: 'Noto Sans KR';
-  width: 800px;
+  width: 660px;
+  border: none;
   font-size: 1.2rem;
   text-align: center;
-  border: none;
-  border-radius: 24px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   outline: none;
+}
+
+::-webkit-input-placeholder{
+  color: #9fa2ad;
+}
+
+::-moz-input-placeholder{
+  color: #9fa2ad;
 }
