--- a/client/src/components/sharenian.css
+++ b/client/src/components/sharenian.css
@@ -1,156 +1,145 @@
-.guild_wrap{
-  display: flex;
-  margin-top: 60px;
-  width: 100vw;
-  height: calc(100vh - 84px);
+.guild_wrap {
+	display: flex;
+	margin-top: 60px;
+	width: 100vw;
+	height: calc(100vh - 84px);
 }
-.guild_side_wrap{
-  width: 3rem;
-  height: 100%;
-  padding: 0 0.5rem;
-  border-right: 1px solid rgb(185, 185, 185);
+.guild_side_wrap {
+	width: 3rem;
+	height: 100%;
+	padding: 0 0.5rem;
+	border-right: 1px solid rgb(185, 185, 185);
 }
 
 .nav_bar_list {
-  position: relative;
-  top: 100%;
-  transform: translateY(-100%);
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+	position: relative;
+	top: 100%;
+	transform: translateY(-100%);
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
 }
 
-.nav_bar_list li{
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 3rem;
-  height: 3rem;
-  margin-bottom: 0.5rem;
-  border: 2px solid #f68600;
-  border-radius: 25%;
+.nav_bar_list li {
+	position: relative;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 3rem;
+	height: 3rem;
+	margin-bottom: 0.5rem;
+	border: 2px solid #f68600;
+	border-radius: 25%;
 }
 
 .img {
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 2rem;
-  height: 2rem;
+	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 2rem;
+	height: 2rem;
 }
 
-.contents_wrap{
-  width: calc(100vw - 18.5rem);
+.contents_wrap {
+	width: calc(100vw - 18.5rem);
 }
 
-.contents_wrap h1{
-  margin: 0.5rem 0 0.25rem 0.5rem;
+.contents_wrap .horizon_divider {
+	margin-left: 3rem;
+	width: 4rem;
+	height: 0;
+	border-bottom: 4px solid #646464;
 }
 
-.contents_wrap .horizon_divider{
-  margin-left: 3rem;
-  width: 4rem;
-  height: 0;
-  border-bottom: 4px solid #646464;
+.contents_wrap div.none_display {
+	margin: 1rem 4rem;
+	height: 80vh;
+	border: 2px solid #646464;
+	border-radius: 20px;
 }
 
-.sharenian_tables{
-  margin: 1rem 4rem;
-  
+div.none_display p {
+	text-align: center;
+	position: relative;
+	top: 30%;
+	font-size: 2rem;
+	font-weight: 600;
+	color: #646464;
 }
 
-.sharenian_lane_wrapper{
-  margin-bottom: 1.4rem;
-  padding: 0.8rem 0;
-  border-radius: 5px;
-  box-shadow: 0px 0px 7px 1px grey;
+.header_wrap {
+	padding: 0.5rem 3rem;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
-
-.table_header{
-  margin-left: 0.8rem;
-  font-size: 1.2rem;
-  font-weight: 900;
+.header_wrap h1 {
+	align-items: center;
 }
 
-.sharenian_table_wrapper{
-  display: none;
-  justify-content: center;
+.header_wrap div.btns {
+	display: flex;
 }
 
-.sharenian_table_wrapper > table +  table{
-  margin-left: 3rem;
+div.btns > div + div {
+	margin-left: 10px;
 }
 
-.guild_users_container{
-  width: 17rem;
-  height: calc(100vh - 84px);
+.btn_assign_lane {
+	position: relative;
+	right: 0px;
+	border: 3px solid #f68600;
+	border-radius: 10px;
+	width: 100px;
+	height: 40px;
+	cursor: pointer;
 }
 
-.users_title{
-  display: flex;
-  padding: 0 0.4rem;
-  height: 50px;
-  background-color: #f68600;
-  justify-content: space-between;
-  align-items: center;
+.btn_assign_lane:hover {
+	background-color: #f68600;
+	color: #fff;
 }
 
-.users_title h3{
-  margin: 0;
-  font-size: 1.6rem;
-  color: #fff;
+.btn_assign_lane p {
+	margin: 0;
+	text-align: center;
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
 }
 
-.users_title .member-sync{
-  width: 1.5rem;
+.guild_users_container {
+	width: 17rem;
+	height: calc(100vh - 84px);
 }
 
-.users_title .member-sync:hover{
-  cursor: pointer;
-  animation: rotate 2s linear infinite;
+.users_title {
+	display: flex;
+	padding: 0 0.4rem;
+	height: 50px;
+	background-color: #f68600;
+	justify-content: space-between;
+	align-items: center;
 }
 
-ul.members {
-  margin-top: 0px;
-  padding: 0.3rem;
-  border-left: 1px solid rgb(185, 185, 185);
-  height: calc(100vh - 144px);
-  overflow-y: scroll;
-  scrollbar-width: none;
+.users_title h3 {
+	margin: 0;
+	font-size: 1.6rem;
+	color: #fff;
 }
 
-ul.members::-webkit-scrollbar {
-  display: none;
+.users_title .member-sync {
+	width: 1.5rem;
 }
 
-.guild_user{
-  display: flex;
-  margin-bottom: 0.2rem;
-  padding-bottom: 0.3rem;
-  border-bottom: 1px solid rgb(185, 185, 185);
-  justify-content: space-between;
-}
-
-.guild_user:hover{
-  background-color: rgb(197, 197, 197);
-}
-
-.guild_user  p {
-  margin: 0;
-}
-
-.guild_user > div.left > p:last-child {
-  font-size: 0.7rem;
-}
-
-.guild_user >div.right{
-  display: flex;
+.users_title .member-sync:hover {
+	cursor: pointer;
+	animation: rotate 2s linear infinite;
 }
 
 @keyframes rotate {
-   to{
-     transform: rotate(360deg)
-   }
+	to {
+		transform: rotate(360deg);
+	}
 }
